--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,42 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  font-size: 62.5%;
+}
+
+html {
+  box-sizing: border-box;
+}
+
+body {
+  box-sizing: inherit;
+}
+
+@font-face {
+  font-family: "grotesk", sans-serif;
+  src: url("/src/hk-grotesk/HKGrotesk-Regular.otf");
+}
+
+@font-face {
+  font-family: "grotesk-light", sans-serif;
+  src: url("/src/hk-grotesk/HKGrotesk-Light.otf");
+}
+
+@font-face {
+  font-family: "grotesk-semibold", sans-serif;
+  src: url("/src/hk-grotesk/HKGrotesk-SemiBold.otf");
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "grotesk-semi-italic-bold", sans-serif;
+  src: url("/src/hk-grotesk/HKGrotesk-SemiBoldItalic.otf");
+}
+
+@font-face {
+  font-family: "grotesk-italic", sans-serif;
+  src: url("/src/hk-grotesk/HKGrotesk-Italic.otf");
 }
