--- a/src/components/common/integration/integration.module.css
+++ b/src/components/common/integration/integration.module.css
@@ -28,3 +28,26 @@
   opacity: 0.8;
   text-align: center;
 }
+
+/**********************MEDIA QUERY******************************/
+
+@media all and (max-width: 37.5em) {
+  .integrateHeader {
+    font-size: 2rem;
+  }
+
+  .integrateText {
+    font-size: 1.4rem;
+  }
+}
+
+/* 365px */
+@media all and (max-width: 22.8125em) {
+  .integrateHeader {
+    font-size: 1.5rem;
+  }
+
+  .integrateText {
+    font-size: 1rem;
+  }
+}
