--- a/src/components/enterprise/enterprise.module.css
+++ b/src/components/enterprise/enterprise.module.css
@@ -118,17 +118,47 @@
   width: 85%;
 }
 
-.enterpriseSpan {
-  position: absolute;
-  bottom: -3.5rem;
-  right: 25rem;
+.enterpriseSpanBox {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 2.1rem;
+  margin-right: 17rem;
+}
 
+.enterpriseSpan {
+  display: block;
   font-size: 1.5rem;
   line-height: 2.3rem;
   color: #abbcd5;
 }
 
-@media all and (max-width: 1220px) {
+/**********************MEDIA QUERY******************************/
+
+@media all and (min-width: 75em) {
+  .enterpriseWrapper {
+    display: flex;
+    justify-content: space-between;
+    margin-right: 10rem;
+  }
+}
+
+/* 1350px */
+
+@media all and (max-width: 84.375em) {
+  .enterpriseWrapper {
+    margin-right: 2rem;
+  }
+
+  .enterpriseReportBox {
+    margin-left: 5rem;
+    margin-right: 6rem;
+    margin-top: 6rem;
+  }
+}
+
+/* 1000px */
+
+@media all and (max-width: 62.5em) {
   .enterpriseWrapper {
     display: flex;
     flex-direction: column;
@@ -136,6 +166,67 @@
   }
 
   .enterpriseReportBox {
-    margin-bottom: 4rem;
+    margin-bottom: 5rem;
+  }
+
+  .enterpriseSpanBox {
+    justify-content: center;
+  }
+}
+
+/* 470px */
+
+@media all and (max-width: 29.375em) {
+  .enterpriseReportBox {
+    width: 100%;
+    margin-right: 0rem;
+    margin-left: 3rem;
+    overflow: hidden;
+  }
+
+  .enterpriseLinkBox {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .reportHeaderlg {
+    font-size: 2rem;
+  }
+
+  .reportHeaderText {
+    font-size: 1.2rem;
+  }
+
+  .enterpriseWeb {
+    order: 1;
+    margin-top: 2rem;
+  }
+
+  .tibleText1 {
+    font-size: 1.3rem;
+  }
+
+  .tibleText2 {
+    font-size: 1rem;
+  }
+
+  .encyptionCentered {
+    justify-content: center;
+  }
+
+  .tibleIconBox {
+    margin-left: 2rem;
+  }
+
+  .enterpriseSpanBox {
+    margin: 0rem;
+    margin-top: 2rem;
+  }
+
+  .enterpriseSpan {
+    font-size: 1rem;
+    margin-right: 0;
   }
 }
