--- a/src/components/cardEngineers/cardEngineers.module.css
+++ b/src/components/cardEngineers/cardEngineers.module.css
@@ -45,8 +45,16 @@
   margin-top: -2.5rem;
 }
 
-@media all and (max-width: 830px) {
+/*****************************MEDIA QUERY****************/
+/* 1093px */
+@media all and (max-width: 68.3125em) {
   .cardText {
-    font-size: 1.5rem;
+    font-size: 1.4rem;
+  }
+}
+
+@media all and (max-width: 56.25em) {
+  .cardWrapper {
+    margin-bottom: 5rem;
   }
 }
